# captains_log

./: .gitignore  .prospector.yaml  CLAUDE.md  COMPUTER.md  Dockerfile  Dockerfile.playwright  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
.claude/agents/: code-simplifier.md
alembic/: env.py
alembic/versions/: 31b07ed07a1e_auto_generated_migration.py  58b553768a2d_add_fitbit_integration_models.py  7b4de568e099_add_settings_and_preferences.py  8148f20aee01_auto_generated_migration.py  aa817c3300c9_add_init_workflow_fields.py  add_audio_local_path.py  add_user_support.py  add_video_storage_fields.py  add_video_support.py  dcea7745b69b_initial_migration_with_pgvector.py  f3a2b1c5d8e9_add_enhanced_location_fields.py
app/: auth.py  config.py  dependencies.py  main.py  middleware.py  requirements.txt
app/api/: auth.py  fitbit.py  logs.py  settings.py  status.py
app/models/: fitbit.py  log_entry.py  settings.py  user.py
app/schemas/: __init__.py  user.py
app/services/: audio_chunker.py  fitbit_service.py  geocoding.py  media_storage.py  network_resilient_processor.py  openai_client.py  s3.py  settings_service.py  video_processor.py  weather_service.py
app/src/: __main__.py  db.py
app/static/css/: lcars.css
app/templates/: base.html  detail.html  index.html  login.html  map.html  record.html  search.html  settings.html  signup.html  status.html
app/templates/fragments/: log_entries.html  search_results.html
app/workflows/: __init__.py  audio_processor.py
tests/: conftest.py  factories.py  test_api_logs.py  test_audio_chunker.py  test_audio_workflows.py  test_auth_endpoints.py  test_fitbit_api.py  test_fitbit_credentials_fix.py  test_fitbit_migrations.py  test_fitbit_models.py  test_fitbit_service.py  test_fitbit_workflow.py  test_log_classification.py  test_log_entry_user.py  test_login_error_handling.py  test_login_flow.py  test_network_resilience.py  test_openai_service.py  test_s3_service.py  test_settings_fitbit.py  test_status_page.py  test_user_context_middleware.py  test_user_model.py  test_video_processing.py  test_weather_new_fields.py  test_weather_service.py  utils.py
tests/cassettes/classification/: ambiguous_log.yaml  captains_log.yaml  crew_role_log.yaml  multiline_personal.yaml  personal_log_capitalized.yaml  personal_log_in_middle.yaml  personal_log_lowercase.yaml  personal_log_minimal.yaml  personal_log_uppercase.yaml  personal_log_with_comma.yaml  ships_log.yaml
tests/e2e/: README.md  conftest.py  test_log_fitbit_data.py  test_recording_page.py  test_recording_regressions.py  test_settings_fitbit.py  test_settings_page.py  test_status_page.py
tests/fixtures/: create_test_audio.py
utils/: changed_files.sh  check-pr-size.sh  cleanup.sh  dev.sh  format.sh  start.sh
